updated package.json with additional dependencies and metadata

--- a/Back-end/.env
+++ b/Back-end/.env
@@ -1,4 +1,5 @@
-MONGODB_URL = "mongodb+srv://Enex:21271229@neww.dxbafih.mongodb.net"
+MONGODB_URL = "mongodb+srv://Enex:21122729@cluster0.k9sg8f5.mongodb.net"
 CLOUDINARY_API_KEY = "165548138878677"
 CLOUDINARY_SECRET_KEY = "GVEBHtgJGmSYm2S7a3z9SG0S-sc"
 CLOUDINARY_NAME = "ddjz3f51q"
+JWT_SECRET = "enyewa"
