--- a/Enex-Boutique/Backend/package.json
+++ b/Enex-Boutique/Backend/package.json
@@ -8,7 +8,8 @@
   "main": "Server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
